Fixed spacing on mobile and inert warning

--- a/src/blocks/CodeFeature/index.module.scss
+++ b/src/blocks/CodeFeature/index.module.scss
@@ -20,6 +20,11 @@
   @include mid-break {
     padding-top: calc(var(--base) * 3);
     padding-bottom: calc(var(--base) * 3);
+    row-gap: calc(var(--base) * 0);
+
+    &.hasLinks {
+      row-gap: calc(var(--base) * 2);
+    }
   }
 }
 
